--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 .grid-container {
     background-color: rgba(209, 209, 209, 0.733);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
     border-radius: 1em;
     margin: 20px;
     min-height: 4em;
