--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-content: space-between;
-    justify-content: space-around;
+    height: 100%;
+    align-items: center;
 }
 
 .menu-container {
     background-color: rgba(209, 209, 209, 0.733);
-    min-height: 10vh;
+    min-height: 96px;
+    width: 50vw;
     display: flex;
     margin: 20px;
     justify-content: space-around;
@@ -27,18 +28,21 @@
 
 .grid-container {
     background-color: rgba(209, 209, 209, 0.733);
+    padding: 5px;
     display: grid;
+    gap: 5px;
     grid-auto-columns: 1fr;
     border-radius: 1em;
     margin: 20px;
     min-height: 4em;
+    width: 99vw;
 }
 
 .cell {
-    height: 200px;
-    width: 200px;
-    margin: 5px;
-    border: 1px solid rgb(255, 255, 255);
+    height: 100px;
+    width: 100px;
+    border-radius: 1rem;
+    border: 1px solid rgb(255, 174, 174);
     background-color: rgb(255, 255, 255);
     justify-self: center;
 }
